; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d11_fmt.c_Direct3D11LoadShaderLibrary.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_chroma/extr_d3d11_fmt.c_Direct3D11LoadShaderLibrary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"D3DCOMPILER_%d.dll\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @Direct3D11LoadShaderLibrary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @Direct3D11LoadShaderLibrary() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca [19 x i32], align 16
  store i32* null, i32** %1, align 8
  store i32 47, i32* %2, align 4
  br label %4

4:                                                ; preds = %18, %0
  %5 = load i32, i32* %2, align 4
  %6 = icmp sgt i32 %5, 41
  br i1 %6, label %7, label %21

7:                                                ; preds = %4
  %8 = getelementptr inbounds [19 x i32], [19 x i32]* %3, i64 0, i64 0
  %9 = call i32 @TEXT(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @_snwprintf(i32* %8, i32 19, i32 %9, i32 %10)
  %12 = getelementptr inbounds [19 x i32], [19 x i32]* %3, i64 0, i64 0
  %13 = call i32* @LoadLibrary(i32* %12)
  store i32* %13, i32** %1, align 8
  %14 = load i32*, i32** %1, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %7
  br label %21

17:                                               ; preds = %7
  br label %18

18:                                               ; preds = %17
  %19 = load i32, i32* %2, align 4
  %20 = add nsw i32 %19, -1
  store i32 %20, i32* %2, align 4
  br label %4

21:                                               ; preds = %16, %4
  %22 = load i32*, i32** %1, align 8
  ret i32* %22
}

declare dso_local i32 @_snwprintf(i32*, i32, i32, i32) #1

declare dso_local i32 @TEXT(i8*) #1

declare dso_local i32* @LoadLibrary(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
